--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0"
   },
