--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -18,6 +18,7 @@
     "express-async-errors": "^3.1.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.5.3",
+    "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
