--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -27,6 +27,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^29.0.1",
+    "mockingoose": "^2.15.2",
     "nodemon": "^2.0.19",
     "supertest": "^6.2.4"
   },
