--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development nodemon index.js",
-    "test": "NODE_ENV=test jest --verbose"
+    "test": "NODE_ENV=test jest --verbose",
+    "test_env" : "NODE_ENV=test nodemon index.js"
   },
   "author": "Toni Rämö",
   "license": "MIT",
